--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 .container {
     display: flex;
     justify-content: space-around;
+    margin: 0 auto;
     background-color: #1B244A;
     color: #FFFFFF;
     width: 575px;
@@ -19,16 +20,43 @@ body {
 
 h3 {
     text-align: center;
+    font-size: 40px;
 }
 
 .score-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #000;
     text-align: center;
-    padding: 0 30px;
+    padding: 5px 30px;
+    width: 155px;
+    height: 120px;
 }
 
 .score {
     color: #F94F6D;
     font-family: 'Cursed_Timer';
     font-size: 90px;
+}
+
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    padding: 15px 0;
+}
+
+.btn {
+    background-color: #1B244A;
+    border: 1px #9AABD8 solid;
+    margin: 0 5px;
+    color: #9AABD8;
+    font-family: 'Cursed_Timer';
+    padding: 5px 5px;
+}
+
+.btn:hover {
+    background-color: #9AABD8;
+    color: #1B244A;
 }
