--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #E5E5E5;
 }
 
 .container {
@@ -70,11 +71,11 @@ h3 {
     font-family: 'Cursed_Timer';
     padding: 5px 5px;
 }
+
 #reset-btn:hover {
     background-color: #9AABD8;
     color: #1B244A;
 }
-
 
 #reset-container {
     display: flex;
