--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #E5E5E5;
 }
 
@@ -14,6 +14,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin: 235px auto;
+    padding: 35px 50px;
     background-color: #1B244A;
     color: #FFFFFF;
     width: 575px;
@@ -45,7 +46,7 @@ h3 {
 .btn-container {
     display: flex;
     justify-content: center;
-    padding: 15px 0;
+    padding: 35px 0;
 }
 
 .btn {
